# fishregression

./: .Dockerfile_classifier.swp  .gitignore  Dockerfile  Dockerfile_classifier  Dockerfile_regressor  docker_build  pyproject.toml
classifier_docker/: Dockerfile
lb/: Dockerfile  default.conf
note/: LinearRegression.ipynb  LinearRegression.py  model.pkl  r1.ipynb  r1.py
src/fishregression/: .main_classifier.py.swp  classifier.py  cli.py  main.py  main_classifier.py  main_regressor.py  regressor.py
src/fishregression/data/: classifier.pkl  model.pkl  regressor.pkl
